<resources>
    <string name="app_name">AperoMix</string>
    <string name="Boogaloo_Regular">Boogaloo-Regular</string>
    <string name="fragment_main_subtitle">Jeu d\'alcool</string>
    <string name="fragment_main_start_btn">Jouer</string>
    <string name="fragment_main_delete_player_error">Vous ne pouvez jouer à moins de 3 joueurs</string>
    <string name="fragment_main_player">Joueur </string>
    <string name="share_txt">https://aperomix.page.link/Tbeh</string>
    <string name="fragment_login_title">Connexion</string>
    <string name="fragment_login_email">Adresse email</string>
    <string name="fragment_login_login">Connexion</string>
    <string name="fragment_login_password">Mot de passe</string>
    <string name="fragment_login_no_account">Vous n\'avez pas encore de compte ?</string>
    <string name="fragment_login_register">Inscrivez vous.</string>
    <string name="LoginActivity_loading_message_user_login">Connexion en cours\nVeuillez patienter</string>
    <string name="LoginActivity_input_empty">Veuillez saisir vos identifiants</string>
    <string name="LoginActivity_login_faield">Email ou mot de passe incorrect</string>
    <string name="fragmentLoginSucess">Connexion avec succès</string>
    <string name="fragment_register_sucess">Compte créer avec succès</string>
    <string name="fragment_register_title">Inscription</string>
    <string name="fragment_register_email">Adresse email</string>
    <string name="fragment_register_pseudo">Pseudonyme</string>
    <string name="fragment_register_password">Mot de passe</string>
    <string name="fragment_register_password_info">Le mot de passe doit contenir au moins 8 caractères, une majuscule et au moins un chiffre.</string>
    <string name="fragment_register_confirmpassword">Confirmer votre mot de passe</string>
    <string name="fragment_register_phone_numbre">Numéro de téléphone</string>
    <string name="fragment_register_birthday">Date de naissance :</string>
    <string name="fragment_register_confirm">Je confirme avoir 18 ans ou plus</string>
    <string name="fragment_register_next">Suivant</string>
    <string name="fragment_register_register_success">Compte créé avec succès</string>
    <string name="fragment_register_register_faield">Le compte n\'a pas peu être créé</string>
    <string name="fragment_register_register_email_toats">Veuillez entrer une adresse mail valide.</string>
    <string name="fragment_register_mustadult_toats">Vous devez avoir 18 ans ou plus pour utiliser cette application</string>
    <string name="basefragment_utils_account">Erreur  inconnue</string>
    <string name="BeLuckyWelcome">Bienvenue à BeLucky Land, êtes-vous prêt pour une folle aventure ? \n\n &#127881;&#127866;&#128513;&#128513;&#127866;&#127881;</string>
    <string name="BeLuckyCase2">Alors on lance comme une fille ? Allez relance ! &#128170;&#127922; </string>
    <string name="BeLuckyCase3">La partie commence bien pour toi ! Bois 2 gorgées et plus vite que ça ! &#127866;</string>
    <string name="BeLuckyCase4">Retour case départ pour toi ! &#128074; \nEt au passage bois 1 gorgée &#127866;</string>
    <string name="BeLuckyCase7">Retour case départ pour toi ! &#128074; \nEt au passage bois 1 gorgée &#127866;</string>
    <string name="BeLuckyCase8">Bah dis donc, tu étais à deux doigts d\'arriver au tunnel &#128527; \nÇa sera pour le prochain tour ! En attendant bois 3 gorgées ! &#127866;</string>
    <string name="BeLuckyCase9">Hop là, pas si vite ! &#9995; \nSi tu veux aller de l\'autre côté tu dois d\'abord payer la taxe de tunnel. Bois 1 gorgée pour chaque joueur ayant déjà utilisé ce tunnel, si tu es le premier bois 2 gorgées pour le mettre en marche ! &#127866;</string>
    <string name="BeLuckyCase10">Bienvenue de l\'autre côté ! Tous les joueurs qui n\'ont pas encore pris le tunnel boivent une gorgée, à la vôtre les nazes ! &#127866;</string>
    <string name="BeLuckyCase11">Aie aie aie ! \nJ\'en connais un(e) qui va pouvoir se venger de toutes les crasses que les autres joueurs lui ont faites ! &#128520; \nDistrubue 3 gorgées &#127866;</string>
    <string name="BeLuckyCase12">Aie aie aie ! \nJ\'en connais un(e) qui va pouvoir se venger de toutes les crasses que les autres joueurs lui ont faites ! &#128520; \nDistrubue 4 gorgées &#127866;</string>
    <string name="BeLuckyCase15">Tu pensais peut-être gagner directement sans boire un dernier coup ? &#128514;&#128514; \nC\'est pas le genre de la maison, aller bois 3 gorgées &#127866;</string>
    <string name="BeLuckyCase16">Tu pensais peut-être gagner directement sans boire un dernier coup ? &#128514;&#128514; \nC\'est pas le genre de la maison, aller bois 4 gorgées &#127866;</string>
    <string name="BeLuckyCase17">Aie ! Coup dur pour toi.. Tu retournes au tunnel, ça t\'apprendra à vouloir griller les étapes ! Bois 2 gorgées au passage &#127866;</string>
    <string name="BeLuckyCase18">&#127881; BIEN JOUÉ &#127881; \n\nQui l\'eu cru, nous avons un gagnant ! Allez champion distribue aux joueur de ton choix autant de gorgées qu\'il reste de joueurs &#127866;</string>
    <string name="BeLuckyCarde1">&#127808; Carte chance &#127808; \n\nAvance de 3 cases !</string>
    <string name="BeLuckyCarde2">&#127808; Carte chance &#127808; \n\nRecule de 3 cases !</string>
    <string name="BeLuckyCarde3">&#127808; Carte chance &#127808; \n\nBois 2 gorgées ! &#127866;</string>
    <string name="BeLuckyCarde4">&#127808; Carte chance &#127808; \n\nDistribus 2 gorgées ! &#127866;</string>
    <string name="BeLuckyCarde5">&#127808; Carte chance &#127808; \n\nChangement de place avec le joueur qui est les plus avancé ! &#128260;</string>
    <string name="BeLuckyCarde6">&#127808; Carte chance &#127808; \n\nChangement de place avec le joueur qui est les moins avancé ! &#128260;</string>
    <string name="BeLuckyCarde7">&#127808; Carte chance &#127808; \n\nChangement de place avec un joueur aléatoir &#128260;</string>
    <string name="BeLuckyBegin">Commencer !!</string>
    <string name="BeLuckyEndTour">Tour fini</string>
    <string name="BeLuckyResume">Continuer</string>
    <string name="BeLuckyParamSameColor">Vous ne pouvez pas sélectionner deux fois la même couleur !</string>
    <string name="BeLuckyParamMaxPlayer">Vous ne pouvez pas jouer à plus de dix !</string>
    <string name="BeLucky_fin_de_tour">Fin de tour</string>
    <string name="BeLucky_choisissez_la_couleur_de_vos_pions">Choisissez la couleur de vos pions !</string>
    <string name="BeLucky_3_10_joueurs">3 à 10 joueurs</string>
    <string name="BeLucky_30_minutes_1_heure">30 minutes à 1 heure</string>
    <string name="BeLucky_jouer">Jouer</string>
    <string name="BeLucky_description">Description :</string>
    <string name="Belucky_description_content">Le BeLucky est un jeu de soirée, dans le style d\'un jeu de plateau. Le but du jeu est donc d\'arriver le plus vite possible sur la dernière case, pour cela il faudra éviter les cartes piège qui vous feront reculer !</string>
    <string name="PapinBegin">Cliquez sur l\'écran pour commencer et activer le son</string>
    <string name="Papin_error1">Revenez au dernier tour de jeu</string>
    <string name="Papin_error2">La partie n\'a pas encore commencé</string>
    <string name="PapinResumeGame">LA PARTIE CONTINUE !</string>
    <string name="PapinResume">Continuer</string>
    <string name="PapinEndGame">Partie fini!</string>
    <string name="PapinName">PAIPIN GAME</string>
    <string name="PapinMixteMsg">Mixité ?</string>
    <string name="PapinMixteOrNot">Êtes vous un groupe mixte ? Juste des garçons, ou juste des filles ?</string>
    <string name="PapinMixte">Mixte</string>
    <string name="PapinNotMixte">Non Mixte</string>
    <string name="PapinRuleTitle1">INVENTE UNE REGLE</string>
    <string name="PapinRule1">Le joueur invente une règle. Exemple : Boire de la main gauche, si quelqu\'un ne respect pas cette règle il boit une gorgée</string>
    <string name="PapinRuleTitle2">DONNE 2 GORGEES</string>
    <string name="PapinRule2">Distribue 2 gorgées</string>
    <string name="PapinRuleTitle3">BOIS 2 GORGEES</string>
    <string name="PapinRule3">Bois 2 gorgées</string>
    <string name="PapinRuleTitle4">DONNE 3 GORGEES</string>
    <string name="PapinRule4">Distribue 3 gorgées</string>
    <string name="PapinRuleTitle5">BOIS 3 GORGEES</string>
    <string name="PapinRule5">Bois 3 gorgées</string>
    <string name="PapinRuleTitle6">LES GARCONS BOIVENT</string>
    <string name="PapinRule6">Les garçons boivent 1 gorgée</string>
    <string name="PapinRuleTitle7">LES FILLES BOIVENT</string>
    <string name="PapinRule7">Les filles boivent 1 gorgée</string>
    <string name="PapinRuleTitle8">ACOLYTE</string>
    <string name="PapinRule8">Choisisser un joueur qui deviendra votre acolyte, celui-ci deviendra votre partenaire de boisson. A chaque fois que l\'un de vous deux bois, l\'autre l\'accompagne (il ne peut y avoir qu\'un seul binôme d\'acolyte, si la règle tombe sur un autre joueur lui et son partenaire prendront la place des précédents)</string>
    <string name="PapinRuleTitle9">REFERENDUM</string>
    <string name="PapinRule9">Désigner du doigt tous en même temps un joueur, le joueur avec le plus de voie boit une gorgée !</string>
    <string name="PapinCountdown">Compte à rebours</string>
    <string name="PapinRuleTitle10">RAPIDITE : BRAS GAUCHE</string>
    <string name="PapinRule10">Le dernier à lever son bras gauche boit une gorgée</string>
    <string name="PapinRuleTitle11">RAPIDITE : BRAS DROIT</string>
    <string name="PapinRule11">Le dernier à lever son bras droit boit une gorgée</string>
    <string name="PapinRuleTitle12">RAPIDITE : JAMBE GAUCHE</string>
    <string name="PapinRule12">Le dernier à lever sa jambe gauche boit une gorgée</string>
    <string name="PapinRuleTitle13">RAPIDITE : LES BRAS</string>
    <string name="PapinRule13">Le dernier à lever ses deux bras boit une gorgée</string>
    <string name="PapinRuleTitle14">CHOISIS UN THEME</string>
    <string name="PapinRule14">Le joueur choisi un thème exemple : les fleurs. Ensuite chacun votre tour donner un nom de fleur. Le joueur qui perd est celui qui ne trouve plus de nom, donne un nom déja utilisé ou est trop long à trouver un nom. Le joueur perdant boit une gorgée (le joueur dont c\'est le tour commence, le sens de rotation est le même que celui de jeu)</string>
    <string name="PapinRuleTitle15">FREEZE</string>
    <string name="PapinRule15">Le joueur peut à nimporte quel moment crier FREEZE, je premier joueur à bouger perd et boit une gorgée. Le FREEZE est à usage unique (cligner ou sourire est considéré comme bouger)</string>
    <string name="PapinRuleTitle16">PAPIN GAME</string>
    <string name="PapinRuleTitle17">DAME DU REGARD</string>
    <string name="PapinRule17">Le joueur devient la dame du regard, chaque joueur regardant la dame du regard dans les yeux boit une gorgée (Le joueur reste la dame du regard jusqu\'a ce qu\'un autre joueur soit désigné à sa place)</string>
    <string name="PapinRuleTitle18">DAME DES QUESTIONS</string>
    <string name="PapinRule18">Le joueur devient la dame des questions, chaque joueur répondant à la dame des question dans les yeux boit une gorgée (Le joueur reste la dame des question jusqu\'a ce qu\'un autre joueur soit désigné à sa place)</string>
    <string name="PapinRuleTitle19">ROI DES POUCES</string>
    <string name="PapinRule19">Le joueur devient le roi des pouces, le roi des pouces peut poser son pouce où il veut, le dernier à faire de même boit. Pouvoir à usage unique (S\'il pose son pouce sur son téléphone, les joueurs peuvent poser leur pouce sur leur propre téléphone mais s\'il pose son pouce sur la bouteille d\'eau, tous les joueurs doivent poser leur pouce sur la même bouteille)</string>
    <string name="PapinRuleTitle20">JUSTE PRIX</string>
</resources>