<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.lucasri.aperomix.views.AperoMixTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_title_marginTop"
        android:layout_marginBottom="15dp"
        android:text="@string/fragment_login_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/login_title_textSize"
        android:gravity="center"/>

    <EditText
        android:id="@+id/fragment_login_email_edt"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edt"
        android:hint="@string/fragment_login_email"
        android:padding="15dp"
        android:textSize="@dimen/login_edtTxt_textSize"
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/fragment_login_password_edt"
        android:layout_below="@+id/fragment_login_email_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edt"
        android:hint="@string/fragment_login_password"
        android:textSize="@dimen/login_edtTxt_textSize"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/fragment_login_login_btn"
        android:layout_below="@+id/fragment_login_password_edt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_loginBtn_height"
        android:background="@drawable/border_btn"
        android:layout_margin="15dp"
        android:text="@string/fragment_login_login"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_below="@+id/fragment_login_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_registerBtn_textSize"
            android:text="@string/fragment_login_no_account"/>

        <TextView
            android:id="@+id/fragment_login_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/login_registerBtn_textSize"
            android:text="@string/fragment_login_register"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.lucasri.aperomix.views.AperoMixTextView
            android:id="@+id/fragment_login_appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text="@string/app_name"
            android:textSize="16sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/fragment_login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone"/>

</RelativeLayout>